--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.2
   firebase_auth: ^5.7.0
+  cloud_firestore: ^5.5.0
+  provider: ^6.1.2
+  fl_chart: ^0.69.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
